Get in touch now takes you to dock screen

--- a/Serendipity/Base.lproj/Main.storyboard
+++ b/Serendipity/Base.lproj/Main.storyboard
@@ -75,7 +75,7 @@
         <!--Your Matches-->
         <scene sceneID="mW7-zq-TQ3">
             <objects>
-                <viewController storyboardIdentifier="Connections" automaticallyAdjustsScrollViewInsets="NO" id="YUi-xK-iJg" customClass="DockViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Dock" automaticallyAdjustsScrollViewInsets="NO" id="YUi-xK-iJg" customClass="DockViewController" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" title="Your Matches" id="n18-f6-V7D">
                         <barButtonItem key="backBarButtonItem" title=" " id="cW2-Pa-cVe"/>
                     </navigationItem>
